# recsys-movies

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  pyproject.toml
src/: collaborative-svd.ipynb  content-based-filtering.ipynb  data.py  genre-filter.ipynb  main.py  models.py  movielens.py  text-based-movie-recs.ipynb  text-search.ipynb  two-towers-1-feature-generation.ipynb
