[project]
name = "recsys-movies"
version = "0.1.0"
description = "Recommendations systems built with the MovieLens + TMDB datasets."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastparquet>=2024.11.0",
    "kagglehub>=0.3.5",
    "lightning[extra]>=2.5.0.post0",
    "matplotlib>=3.10.0",
    "numpy<2",
    "optuna>=4.1.0",
    "optuna-integration[pytorch-lightning]>=4.1.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "scikit-learn>=1.6.0",
    "sentence-transformers>=3.3.1",
    "tensorboard>=2.18.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.1",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
